[gd_scene load_steps=2 format=2]

[ext_resource path="res://CharacterPuppets/Scripts/Modules/InstantMoveSystem.gd" type="Script" id=1]

[node name="InstantMoveSystem" type="Node"]
script = ExtResource( 1 )

[node name="BoostDuration" type="Timer" parent="."]
one_shot = true

[node name="KnockbackDuration" type="Timer" parent="."]
one_shot = true

[node name="SlowDuration" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="BoostDuration" to="." method="end_boost"]
[connection signal="timeout" from="KnockbackDuration" to="." method="end_knockback"]
[connection signal="timeout" from="SlowDuration" to="." method="end_slow"]
